--- a/code/DecodeAttributes_DataIntensive.ipynb
+++ b/code/DecodeAttributes_DataIntensive.ipynb
@@ -883,9 +883,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark3kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -897,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
