adding explanation to the social network section

--- a/code/process.ipynb
+++ b/code/process.ipynb
@@ -2297,7 +2297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encoding centrality measures to True or False bool variable (True means the user is important in the network, having degree centrality value greater than the median) and check their distribution grouped by engagement type."
+    "Encoding centrality measures to True or False bool variable (True means the engaging user is important in the network, having degree centrality value greater than the median)."
    ]
   },
   {
@@ -2924,6 +2924,13 @@
     "                                                                ax=ax2,\n",
     "                                                                title='tweet engagement distribution by daytime')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the social network section we created a new boolen variable (is_engaging_user_centrality), that is true if the engaging user has a centrality value greater that the median of all centrality values. Here we display the distribution of the users based on this variable. We can see that there are more users where is_engaging_user_centrality is false. After that we checked the number of engagedements (like, reply etc) grouped by the is_engaging_user_centrality variable and we can see, that there are more engagedements among the engaging users where is_engaging_user_centrality is true so user centrality is greater than the median centrality. From this we can conclude that the user centrality within the network has an impact on the probability of engagement, because we got higher numbers for the engagement types among the users whose centrality value is greater. "
    ]
   },
   {
