--- a/code/process.ipynb
+++ b/code/process.ipynb
@@ -48,7 +48,10 @@
     "from scipy.sparse import coo_matrix, hstack\n",
     "\n",
     "# for tdidf\n",
+    "import pyspark.sql.functions as f\n",
     "from transformers import BertTokenizer\n",
+    "#from transformers import BertModel\n",
+    "from pyspark.sql.functions import *\n",
     "from sklearn.feature_extraction import text\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
@@ -4335,7 +4338,7 @@
     }
    ],
    "source": [
-    "model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[tf.keras.metrics.AUC(curve = 'PR')])\n",
+    "model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[pr_auc])\n",
     "model.summary()"
    ]
   },
@@ -4419,7 +4422,7 @@
     "\n",
     "    fold_no = 1\n",
     "    for train_indices, test_indices in kfold.split(X_val, y_val):\n",
-    "        model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[tf.keras.metrics.AUC(curve = 'PR')])\n",
+    "        model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[pr_auc])\n",
     "\n",
     "        print('------------------------------------------------------------------------')\n",
     "        print(f'Training for fold {fold_no} ...')\n",
@@ -4451,9 +4454,9 @@
     "    print('------------------------------------------------------------------------')\n",
     "    \n",
     "validate_baseline(X_val, y_val_like)\n",
-    "validate_baseline(X_val, y_val_reply)\n",
-    "validate_baseline(X_val, y_val_retweet)\n",
-    "validate_baseline(X_val, y_val_retweet_with_comment)"
+    "#validate_baseline(X_val, y_val_reply)\n",
+    "#validate_baseline(X_val, y_val_retweet)\n",
+    "#validate_baseline(X_val, y_val_retweet_with_comment)"
    ]
   },
   {
@@ -4666,7 +4669,7 @@
     "\n",
     "# Return results in the form: engaging_user_id, tweet_id, true label, predicted label, predicted probability\n",
     "def test_baseline(X_val, y_val, X_test, y_test, label):\n",
-    "    model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[tf.keras.metrics.AUC(curve = 'PR')])\n",
+    "    model = generate_model(loss= keras.losses.BinaryCrossentropy(), metrics=[pr_auc])\n",
     "    model.fit(X_val, \n",
     "              y_val,\n",
     "              batch_size=8000,\n",
@@ -4825,9 +4828,9 @@
     "    print('------------------------------------------------------------------------')\n",
     "    \n",
     "validate_nb(X_val, y_val_like)\n",
-    "validate_nb(X_val, y_val_reply)\n",
-    "validate_nb(X_val, y_val_retweet)\n",
-    "validate_nb(X_val, y_val_retweet_with_comment)"
+    "#validate_nb(X_val, y_val_reply)\n",
+    "#validate_nb(X_val, y_val_retweet)\n",
+    "#validate_nb(X_val, y_val_retweet_with_comment)"
    ]
   },
   {
@@ -5241,9 +5244,9 @@
     "    print('------------------------------------------------------------------------')\n",
     "    \n",
     "validate_lr(X_val, y_val_like)\n",
-    "validate_lr(X_val, y_val_reply)\n",
-    "validate_lr(X_val, y_val_retweet)\n",
-    "validate_lr(X_val, y_val_retweet_with_comment)"
+    "#validate_lr(X_val, y_val_reply)\n",
+    "#validate_lr(X_val, y_val_retweet)\n",
+    "#validate_lr(X_val, y_val_retweet_with_comment)"
    ]
   },
   {
